--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -3,7 +3,7 @@
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <development version="5000" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <scenes>
         <!--Flux OpenGL View Controller - OpenGLView-->
@@ -70,6 +70,7 @@
                         <outlet property="gpsY" destination="aJ3-1Y-rrZ" id="e7p-37-1qT"/>
                         <outlet property="kX" destination="GBW-b2-Bw5" id="jRt-Rg-dZZ"/>
                         <outlet property="kY" destination="N1t-09-8PY" id="6Ab-fn-zb0"/>
+                        <outlet property="pedometerL" destination="Xoz-hc-So9" id="pde-jQ-D76"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p12-6b-dHX" userLabel="First Responder" sceneMemberID="firstResponder"/>
